# TerrainSimulatorPlatform

./: .gitignore  CMakeLists.txt  README.md  TSP.world  TSP.world~  model_controller.cpp  model_controller.h
models/TSP/: model-1_4.sdf  model.config  model_14.sdf  model_16.sdf
models/TSP/meshes/: asm_pedal_block.stl  asm_pedal_blockv2.stl  asm_slider_a.stl  asm_slider_b.stl  asm_slider_c.stl
models/test/: exported-robot.sdf  model-1_2.sdf  model-1_4.sdf  model.config  model.sdf
models/test/meshes/: asm_linkage_300.stl  asm_linkage_420.stl  asm_pedal_blockv2simplified.stl
models/test/thrash/: model.sdf
worlds/: TSP.world
